Fix modal overflow

--- a/packages/commonwealth/client/scripts/views/modals/TradeTokenModel/TradeTokenModal.scss
+++ b/packages/commonwealth/client/scripts/views/modals/TradeTokenModel/TradeTokenModal.scss
@@ -1,6 +1,8 @@
 @import '../../../../styles/shared.scss';
 
 .TradeTokenModal {
+  overflow-y: scroll;
+
   .token-info {
     display: flex;
     align-items: center;
